--- a/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
+++ b/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
@@ -15,6 +15,24 @@
         line-height: 31px;
         padding-right: 35px;
     }
+
+    @media (max-width:900px) {
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        padding-left: 35px;
+        box-sizing: border-box;
+    }
+
+    @media (max-width:480px) {
+        p {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+            padding-right: 25px;
+            box-sizing: border-box;
+        }
+    }
 }
 
 .title {
@@ -24,6 +42,13 @@
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
@@ -38,11 +63,45 @@
     border: none;
     color: var(--white-color);
     background: #6442EE;
-    box-shadow: -21px 16px 38px 0px rgba(100, 66, 238, 0.37)
+    box-shadow: -21px 16px 38px 0px rgba(100, 66, 238, 0.37);
+
+    @media (max-width:900px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    @media (max-width:480px) {
+        max-width: 218px;
+        height: 44px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 18.5px;
+    }
 }
 
-.friends{
-    max-width: 400px;
-    max-height: 374px;
-    margin-top: 15px;
+.friends {
+    max-width: 405px;
+    max-height: 384px;
+    margin: 0;
+    margin-left: 5px;
+    margin-top: 25px;
+
+    @media (max-width:480px) {
+        max-width: 228.355px;
+        max-height: 197.726px;
+    }
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width:900px) {
+        flex-direction: column-reverse;
+        margin: 0 auto;
+    }
 }
