--- a/src/shared/ui/Swiper/Swiper.module.scss
+++ b/src/shared/ui/Swiper/Swiper.module.scss
@@ -6,6 +6,18 @@
   align-items: center;
   margin: 0 auto;
   position: relative;
+
+  @media (max-width: 560px) {
+    max-width: 550px;
+    width: 94%;
+    padding-right: 25px;
+    margin-left: 25px;
+    box-sizing: border-box;
+  }
+
+  @media (max-width: 560px) {
+    margin-left: 0;
+  }
 }
 
 .btn {
@@ -77,6 +89,15 @@
   top: 60%;
   left: -39%;
   transform: rotate(360deg);
+
+  @media (max-width:560px) {
+    top: 80%;
+    right: 32%;
+  }
+
+  @media (max-width:480px) {
+    right: -2%;
+  }
 }
 
 .nextCard {
@@ -85,7 +106,16 @@
   transform: rotate(-180deg);
 
   @media (max-width:765px) {
-    right:-2%;
+    right: 2%;
+  }
+
+  @media (max-width:560px) {
+    right: 4%;
+  }
+
+  @media (max-width:480px) {
+    top: 48%;
+    right: 5%;
   }
 }
 
