--- a/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
+++ b/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
@@ -15,6 +15,23 @@
         line-height: 31px;
         padding-right: 35px;
     }
+
+    @media (max-width:900px) {
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        padding-left: 35px;
+    }
+
+    @media (max-width:480px) {
+        p {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+            padding-right: 25px;
+            box-sizing: border-box;
+        }
+    }
 }
 
 .title {
@@ -24,6 +41,13 @@
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
@@ -39,6 +63,21 @@
     color: var(--white-color);
     background: #EE8842;
     box-shadow: -21px 16px 38px 0px rgba(238, 136, 66, 0.42);
+
+    @media (max-width:900px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    @media (max-width:480px) {
+        max-width: 218px;
+        height: 44px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 18.5px;
+    }
 }
 
 .ambassadors {
@@ -47,4 +86,21 @@
     margin: 0;
     margin-left: 5px;
     margin-top: 25px;
+
+    @media (max-width:480px) {
+        max-width: 228.355px;
+        max-height: 197.726px;
+    }
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width:900px) {
+        flex-direction: column-reverse;
+        margin: 0 auto;
+    }
 }
