--- a/src/components/EcoSystem/EcoSystem.module.scss
+++ b/src/components/EcoSystem/EcoSystem.module.scss
@@ -17,10 +17,25 @@
     line-height: 31px;
     margin: 0 auto;
     color: var(--eigengrau-color);
+    padding: 20px;
+    box-sizing: border-box;
 
     p {
         font-size: 20px;
         font-weight: 500;
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
+
+        p {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+        }
     }
 }
 
