--- a/src/components/EcoSystem/Partners/Partners.module.scss
+++ b/src/components/EcoSystem/Partners/Partners.module.scss
@@ -9,22 +9,64 @@
     box-sizing: border-box;
 
     p {
-        max-width: 624px;
-        width: 95%;
+        max-width: 654px;
+        width: 100%;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
-        padding-left: 25px;
+        padding-left: 20px;
+        padding-right: 15px;
+        box-sizing: border-box;
+
+
+        @media (max-width:900px) {
+            padding-left: 25px;
+        }
+
+        @media (max-width:480px) {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+            box-sizing: border-box;
+        }
+    }
+}
+
+.content {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+
+    @media (max-width:900px) {
+        flex-direction: column;
     }
 }
 
 .title {
     display: flex;
     align-items: center;
-    margin: 0;
+    justify-content: center;
+    margin: 0 auto;
+    padding-left: 35px;
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:900px) {
+        margin-left: 25px;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
@@ -42,6 +84,16 @@
         border: 1px solid var(--partners-button-color);
         font-size: 18px;
         font-weight: 700;
+
+        @media (max-width:560px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 218px;
+            max-height: 44px;
+            margin-bottom: 10px;
+            margin-right: 0;
+        }
     }
 
     .buttonConnect {
@@ -56,6 +108,30 @@
         color: var(--white-color);
         background: var(--partners-button-color);
         box-shadow: -21px 16px 38px 0px rgba(193, 45, 217, 0.32);
+
+        @media (max-width:560px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 218px;
+            max-height: 44px;
+            margin-bottom: 10px;
+            margin-right: 0;
+        }
+    }
+
+    @media (max-width:900px) {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    @media (max-width:560px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        flex-direction: column;
     }
 }
 
@@ -84,7 +160,7 @@
     align-items: center;
     margin: 0 auto;
     margin: 0 5px;
-    
+
     @media (max-width:1280px) {
         width: 85%;
         padding: 15px 0;
@@ -92,8 +168,13 @@
     }
 }
 
-.partnersImg{
+.partnersImg {
     max-width: 405px;
     max-height: 384px;
-    margin-top: 20px;
+    margin-top: 35px;
+
+    @media (max-width:480px) {
+        max-width: 228px;
+        max-height: 197px;
+    }
 }
