--- a/src/components/EcoSystem/Sages/Sages.module.scss
+++ b/src/components/EcoSystem/Sages/Sages.module.scss
@@ -14,6 +14,23 @@
         line-height: 31px;
         padding-right: 35px;
     }
+
+    @media (max-width:900px) {
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        padding-left: 35px;
+    }
+
+    @media (max-width:480px) {
+        p {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+            padding-right: 25px;
+            box-sizing: border-box;
+        }
+    }
 }
 
 .title {
@@ -23,6 +40,13 @@
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
@@ -35,10 +59,41 @@
     border: 1px solid var(--hexadecimal-color);
     font-size: 18px;
     font-weight: 700;
+
+    @media (max-width:900px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    @media (max-width:480px) {
+        max-width: 218px;
+        height: 44px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 18.5px;
+    }
 }
 
-.sages{
+.sages {
     max-width: 405px;
     max-height: 384px;
-    margin-top: 45px;
+
+    @media (max-width:480px) {
+        max-width: 228.355px;
+        max-height: 197.726px;
+    }
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width:900px) {
+        flex-direction: column-reverse;
+        margin: 0 auto;
+    }
 }
