--- a/src/components/EcoSystem/Volunteers/Volunteers.module.scss
+++ b/src/components/EcoSystem/Volunteers/Volunteers.module.scss
@@ -14,16 +14,55 @@
         font-weight: 500;
         line-height: 31px;
         padding-left: 25px;
+
+        @media (max-width:900px) {
+            padding-left: 25px;
+        }
+
+        @media (max-width:480px) {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+            box-sizing: border-box;
+        }
+    }
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width:900px) {
+        flex-direction: column;
     }
 }
 
 .title {
     display: flex;
     align-items: center;
-    margin: 0;
+    justify-content: center;
+    margin: 0 auto;
+    padding-left: 35px;
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:900px) {
+        margin-left: 25px;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+
+    }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
@@ -31,17 +70,6 @@
 .buttonsDiv {
     display: flex;
     margin-left: 25px;
-
-    .buttonMore {
-        max-width: 245px;
-        width: 100%;
-        border-radius: 46px;
-        background-color: var(--white-color);
-        padding: 15px;
-        border: 1px solid var(--button-blue-color);
-        font-size: 18px;
-        font-weight: 700;
-    }
 
     .buttonConnect {
         font-size: 18px;
@@ -55,11 +83,40 @@
         border-radius: 46px;
         background: #C5D92D;
         box-shadow: -21px 16px 38px 0px rgba(197, 217, 45, 0.29);
+
+        @media (max-width:560px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 218px;
+            max-height: 44px;
+            margin-bottom: 10px;
+            margin-right: 0;
+        }
+    }
+
+    @media (max-width:900px) {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    @media (max-width:560px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        flex-direction: column;
     }
 }
 
-.volunteers{
+.volunteers {
     max-width: 405px;
     max-height: 384px;
     margin-top: 35px;
+
+    @media (max-width:480px) {
+        max-width: 228px;
+        max-height: 197px;
+    }
 }
