--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -7,8 +7,15 @@
     position: relative;
     max-width: 1920px;
     width: 100%;
+    max-height: 1800px;
+    height: 100%;
     margin: 0 auto;
     padding-top: 106px;
+
+    @media (max-width:880px) {
+        margin-top: 106px;
+    }
+
     @media (max-width:560px) {
         max-width: 590px;
         max-height: 600px;
@@ -19,7 +26,8 @@
 .styles {
     max-width: 1920px;
     width: 100%;
-    @media (max-width:560px) {
+
+    @media (max-width:880px) {
         display: none;
     }
 }
@@ -27,20 +35,41 @@
 .content {
     max-width: 1080px;
     width: 100%;
+
+    @media (max-width:1151px) {
+        max-width: 680px;
+        width: 100%;
+    }
+
+    @media (max-width:880px) {
+        margin-top: 60px;
+    }
+
     @media (max-width:590px) {
         max-width: 590px;
         max-height: 700px;
     }
+
     h2 {
         color: var(--eigengrau-color);
         font-size: 46px;
         font-weight: 900;
         margin-bottom: 0;
-        @media (max-width:560px) {
+
+        @media (max-width:1151px) {
+            font-size: 30px;
+            text-align: center;
+        }
+
+        @media (max-width:616px) {
             font-size: 28px;
+        }
+
+        @media (max-width:560px) {
             font-weight: 700;
             text-align: center;
         }
+
     }
 
     p {
@@ -51,10 +80,14 @@
         font-weight: 600;
         line-height: 31px;
         margin-bottom: 12px;
+
+        @media (max-width:616px) {
+            font-size: 16px;
+        }
+
         @media (max-width:560px) {
             width: 269px;
             text-align: justify;
-            font-size: 16px;
             font-weight: 500;
             line-height: 18.5px;
             margin: 0 auto;
@@ -65,8 +98,6 @@
 .buttonDiv {
     @include flexCenter();
     justify-content: space-between;
-    box-sizing: border-box;
-    padding-bottom: 33px;
 
     .be {
         width: 245px;
@@ -76,7 +107,6 @@
         color: var(--white-color);
         font-size: 18px;
         font-weight: 700;
-        margin-bottom: 12px;
         border: none;
     }
 
@@ -90,7 +120,6 @@
         font-size: 18px;
         font-weight: 700;
         margin-left: 10px;
-
     }
 
     @media (max-width:560px) {
@@ -100,6 +129,7 @@
         .be {
             width: 218px;
             height: 44px;
+            margin-bottom: 10px;
         }
 
         .all {
@@ -118,24 +148,49 @@
     box-sizing: border-box;
     z-index: 1;
     position: absolute;
-    top: 25%;
+    top: 35%;
     left: 20%;
 
     @media (max-width:1340px) {
-        top: 25%;
-        left: 10%;
+        top: 29%;
+        left: 8%;
     }
-    @media (max-width:560px) {
+
+    @media (max-width:1151px) {
+        flex-direction: column-reverse;
+        left: 3%;
+    }
+
+    @media (max-width:1080px) {
+        max-width: 900px;
+        flex-direction: column-reverse;
+        left: 8%;
+    }
+
+    @media (max-width:996px) {
+        max-width: 750px;
+    }
+
+    @media (max-width:835px) {
+        max-width: 650px;
+    }
+
+    @media (max-width:725px) {
+        max-width: 550px;
+        top: 29%;
+        left: 8%;
+    }
+
+    @media (max-width:616px) {
         max-width: 500px;
         top: 25%;
         left: 5%;
-        flex-direction: column-reverse;
     }
+
     @media (max-width:480px) {
         max-width: 350px;
         top: 25%;
         left: 5%;
-        flex-direction: column-reverse;
     }
 }
 
@@ -144,7 +199,11 @@
     width: 100%;
     margin: 0;
 
-    @media (max-width:590px) {
+    @media (max-width:1168px) {
+        max-width: 510px;
+    }
+
+    @media (max-width:560px) {
         max-width: 280px;
         display: flex;
         align-items: center;
@@ -157,6 +216,7 @@
 .socialMedia {
     @include flexCenter();
     flex-direction: column;
+
     @media (max-width:1200px) {
         display: none;
     }
@@ -207,8 +267,15 @@
     box-sizing: border-box;
 
     @media (max-width:1340px) {
-        top: 8%;
+        top: 6%;
+        left: 53%;
     }
+
+    @media (max-width:880px) {
+        top: 80%;
+        left: 49%;
+    }
+
     @media (max-width:560px) {
         max-width: 350px;
         width: 100%;
@@ -243,11 +310,17 @@
         width: 100%;
         max-height: 530px;
     }
+
+    @media (max-width:880px) {
+        max-width: 800px;
+        height: 460px;
+        position: absolute;
+        opacity: 1;
+    }
+
     @media (max-width:560px) {
         width: 340px;
         height: 250px;
-        position: absolute;
-        opacity: 1;
     }
 }
 
@@ -265,7 +338,8 @@
         width: 100%;
         max-height: 900px;
     }
-    @media (max-width:560px) {
+
+    @media (max-width:880px) {
         display: none;
     }
 }
