--- a/src/components/Hypotheses/Hypotheses.module.scss
+++ b/src/components/Hypotheses/Hypotheses.module.scss
@@ -6,16 +6,19 @@
 }
 
 .hypothesesContent {
-    max-width: 1050px;
+    max-width: 1080px;
     width: 95%;
     text-align: justify;
     line-height: 31px;
     margin: 0 auto;
     color: var(--eigengrau-color);
-
+    box-sizing: border-box;
     p {
         font-size: 20px;
         font-weight: 500;
+    }
+    @media (max-width:980px) {
+        padding: 15px;
     }
 }
 
@@ -29,13 +32,22 @@
     margin-left: -15px;
     display: flex;
     align-items: center;
-
     img {
         margin-right: 10px;
+        margin-left: 10px;
+    }
+    @media (max-width:980px) {
+        margin-left: 10px;
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 }
 
 .hypothesesBgImg {
+    padding: 10px 7px 0 7px;
+    box-sizing: border-box;
     max-width: 1925px;
     background-image: linear-gradient(var(--hypothese-color), var(--hypothese-color)), url('../../shared/assets/image498.jpg');
 }
@@ -71,11 +83,14 @@
             background-color: var(--hexadecimal-color);
             color: var(--white-color)
         }
+        @media (max-width:860px) {
+            display: none;
+        }
     }
 
     .pDiv {
         color: var(--white-color);
-        max-width: 637px;
+        max-width: 630px;
         width: 100%;
         max-height: 620px;
         width: 100%;
@@ -84,5 +99,36 @@
         font-weight: 500;
         line-height: 31px;
         margin: 0;
+        @media (max-width:1024px) {
+            font-size: 16px;
+            max-width: 630px;
+            line-height: 20px;
+            width: 90%;
+        }
+    }
+    @media (max-width:860px) {
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+    }
+}
+
+.buttonsDivSelect {
+    display: none;
+    max-width: 365px;
+    width: 100%;
+    max-height: 84px;
+    height: 100%;
+    padding: 25px;
+    background-color: var(--white-color);
+    color: var(--dark-bluish-color);
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    border-radius: 45px;
+    border: none;
+    @media (max-width:860px) {
+        display: block;
     }
 }
