--- a/src/components/Important/Important.module.scss
+++ b/src/components/Important/Important.module.scss
@@ -14,6 +14,8 @@
     margin: 0 auto;
     margin-top: 15px;
     z-index: 1;
+    padding: 25px;
+    box-sizing: border-box;
 }
 
 .topLine {
@@ -28,19 +30,32 @@
 
     h2 {
         color: var(--eigengrau-color);
+
+        @media (max-width:560px) {
+            font-size: 18px;
+            font-weight: 700;
+        }
     }
 
     img {
         margin-right: 10px;
+        margin-left: 10px;
     }
 }
 
 .importantP {
     font-size: 20px;
     font-weight: 500;
-}
 
-//--------------------------------
+    @media (max-width:800px) {
+        font-size: 16px;
+    }
+
+    @media (max-width:560px) {
+        font-size: 14px;
+        line-height: 18.5px;
+    }
+}
 
 .imagesDiv {
     max-width: 1880px;
