--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     max-width: 1920px;
     width: 100%;
-    max-height: 601px;
+    max-height: 1001px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -22,10 +22,26 @@
         line-height: 31px;
         padding-left: 15px;
         text-align: justify;
+
+        @media (max-width:560px) {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+        }
     }
 
     img {
         margin-right: 10px;
+        margin-left: 10px;
+    }
+}
+
+.contextImgText {
+    padding: 25px;
+
+    @media (max-width:560px) {
+        font-size: 14px;
+        line-height: 18.5px;
     }
 }
 
@@ -51,9 +67,16 @@
     font-weight: 700;
     background: var(--button-more-color);
     margin-bottom: 25px;
-}
 
-//--------------------------
+    @media (max-width:560px) {
+        max-width: 218px;
+        max-height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+}
 
 .imagesDiv {
     max-width: 1880px;
@@ -72,7 +95,29 @@
     z-index: 0;
 
     @media (max-width:1340px) {
-        left: 35%;
+        left: 55%;
+    }
+
+    @media (max-width:1340px) {
+        left: 55%;
+        padding-left: 100px;
+    }
+
+    @media (max-width:1134px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        left: 50%;
+    }
+
+    @media (max-width:560px) {
+        top: 5%;
+        left: 45%;
+    }
+
+    @media (max-width:480px) {
+        top: 8%;
     }
 }
 
@@ -98,5 +143,12 @@
 
     @media (max-width:1340px) {
         margin: 0 auto;
+    }
+
+    @media (max-width:560px) {
+        max-width: 440px;
+        width: 100%;
+        max-height: 440px;
+        height: 100%;
     }
 }
