--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -32,11 +32,24 @@
     font-weight: 700;
     padding: 45px 0;
     padding-left: 15px;
+
+    @media (max-width:560px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        font-size: 22px;
+        font-weight: 800;
+    }
+
+    img {
+        margin-right: 7px;
+    }
 }
 
 .newsDiv {
     max-width: 1080px;
-    height:485px;
+    height: 485px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,9 +71,11 @@
     border: 1px solid var(--hexadecimal-color);
     box-shadow: var(--button-shadow);
     margin-top: 25px;
-}
 
-//-----------------------------
+    @media (max-width:480px) {
+        margin-bottom: 25px;
+    }
+}
 
 .styleImg {
     position: absolute;
@@ -72,6 +87,7 @@
     height: 100%;
     padding: 15px;
     opacity: 1;
+
     @media (max-width:1480px) {
         display: none;
     }
