--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -5,6 +5,8 @@
     max-height: 900px;
     height: 100%;
     margin-bottom: 25px;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .projectsContent {
@@ -18,6 +20,19 @@
     p {
         font-size: 20px;
         font-weight: 500;
+    }
+
+    @media (max-width:480px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        p {
+            max-width: 278px;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18.5px;
+        }
     }
 }
 
@@ -34,12 +49,20 @@
     img {
         margin-right: 10px;
     }
+
+    @media (max-width:480px) {
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
+    }
 }
 
 .projectItems {
     max-width: 1080px;
     width: 100%;
     margin: 0 auto;
+
     @media (max-width:1340px) {
         padding-left: 27px;
         margin: 0 auto;
@@ -60,9 +83,11 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-}
 
-//------------------------------------
+    @media (max-width:480px) {
+        margin-left: 12px;
+    }
+}
 
 .imagesDiv {
     max-width: 1880px;
@@ -87,6 +112,7 @@
     height: 100%;
     transform: rotate(90deg);
     opacity: 0.5;
+
     @media (max-width:1340px) {
         display: none;
     }
