Home , Missian , Navbar , News style , Main

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -7,98 +7,89 @@
     position: relative;
     max-width: 1920px;
     width: 100%;
-    max-height: 1800px;
-    height: 100%;
     margin: 0 auto;
     padding-top: 106px;
-
+    padding-bottom: 150px;
+    box-sizing:border-box ;
     @media (max-width:880px) {
-        margin-top: 106px;
+        margin-top: 50px;
     }
-
     @media (max-width:560px) {
         max-width: 590px;
         max-height: 600px;
-        margin-top: 106px;
+    }
+    @media (max-width:480px) {
+        padding-bottom: 250px;
     }
 }
-
 .styles {
     max-width: 1920px;
     width: 100%;
-
     @media (max-width:880px) {
         display: none;
     }
 }
-
 .content {
     max-width: 1080px;
     width: 100%;
-
     @media (max-width:1151px) {
         max-width: 680px;
         width: 100%;
     }
-
     @media (max-width:880px) {
-        margin-top: 60px;
+        margin-top: 50px;
     }
-
     @media (max-width:590px) {
         max-width: 590px;
         max-height: 700px;
+        margin-top: 40px;
     }
-
+    @media (max-width:480px) {
+        margin-top: 30px;
+    }
     h2 {
         color: var(--eigengrau-color);
         font-size: 46px;
         font-weight: 900;
         margin-bottom: 0;
-
         @media (max-width:1151px) {
             font-size: 30px;
             text-align: center;
         }
-
         @media (max-width:616px) {
             font-size: 28px;
         }
-
         @media (max-width:560px) {
             font-weight: 700;
-            text-align: center;
         }
-
     }
-
     p {
         max-width: 1080px;
-        width: 100%;
+        width: 95%;
         text-align: justify;
         font-size: 18px;
         font-weight: 600;
         line-height: 31px;
         margin-bottom: 12px;
-
         @media (max-width:616px) {
             font-size: 16px;
         }
-
         @media (max-width:560px) {
-            width: 269px;
+            width: 399px;
             text-align: justify;
             font-weight: 500;
             line-height: 18.5px;
             margin: 0 auto;
+            margin-top: 10px;
+        }
+         @media (max-width:480px) {
+            width: 259px;
         }
     }
 }
-
 .buttonDiv {
     @include flexCenter();
     justify-content: space-between;
-
     .be {
         width: 245px;
         height: 50px;
@@ -109,7 +100,6 @@
         font-weight: 700;
         border: none;
     }
-
     .all {
         width: 245px;
         height: 50px;
@@ -121,24 +111,20 @@
         font-weight: 700;
         margin-left: 10px;
     }
-
     @media (max-width:560px) {
         flex-direction: column;
         margin-top: 10px;
-
         .be {
             width: 218px;
             height: 44px;
             margin-bottom: 10px;
         }
-
         .all {
             width: 218px;
             height: 44px;
         }
     }
 }
-
 .contentImgTexts {
     max-width: 1020px;
     width: 100%;
@@ -150,47 +136,35 @@
     position: absolute;
     top: 35%;
     left: 20%;
-
     @media (max-width:1340px) {
         top: 29%;
         left: 8%;
     }
-
     @media (max-width:1151px) {
         flex-direction: column-reverse;
         left: 3%;
     }
-
     @media (max-width:1080px) {
         max-width: 900px;
-        flex-direction: column-reverse;
         left: 8%;
     }
-
     @media (max-width:996px) {
         max-width: 750px;
     }
-
     @media (max-width:835px) {
         max-width: 650px;
     }
-
     @media (max-width:725px) {
         max-width: 550px;
-        top: 29%;
+        top: 25%;
         left: 8%;
     }
-
     @media (max-width:616px) {
         max-width: 500px;
-        top: 25%;
         left: 5%;
     }
-
     @media (max-width:480px) {
         max-width: 350px;
-        top: 25%;
-        left: 5%;
     }
 }
 
@@ -198,30 +172,21 @@
     max-width: 550px;
     width: 100%;
     margin: 0;
-
     @media (max-width:1168px) {
         max-width: 510px;
     }
-
     @media (max-width:560px) {
         max-width: 280px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        margin-bottom: 60px;
+        margin-bottom: 30px;
     }
 }
-
 .socialMedia {
     @include flexCenter();
     flex-direction: column;
-
     @media (max-width:1200px) {
         display: none;
     }
 }
-
 .followUs {
     font-weight: 600;
     writing-mode: vertical-lr;
@@ -229,29 +194,24 @@
     transform: rotate(360deg);
     white-space: nowrap;
 }
-
 .line {
     width: 1px;
     height: 50px;
     background-color: var(--eigengrau-color);
     margin: 7px 0;
 }
-
 .icons {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
     img {
         margin-bottom: 3px;
     }
 }
-
 .iconItem {
     width: 10px;
     height: 15px;
 }
-
 .imagesDiv {
     max-width: 1880px;
     width: 90%;
@@ -265,25 +225,24 @@
     justify-content: space-between;
     padding: 15px;
     box-sizing: border-box;
-
     @media (max-width:1340px) {
         top: 6%;
         left: 53%;
     }
-
     @media (max-width:880px) {
-        top: 80%;
-        left: 49%;
+        top: -10%;
+        left: 50%;
     }
-
     @media (max-width:560px) {
         max-width: 350px;
         width: 100%;
-        top: 8%;
-        left: 50%;
+        top: -18%;
+        left: 52%;
+    }
+    @media (max-width:480px) {
+        top: -19%;
     }
 }
-
 .firstImg {
     max-width: 134px;
     width: 100%;
@@ -291,39 +250,33 @@
     height: 100%;
     transform: rotate(90deg);
     opacity: 0.5;
-
     @media (max-width:1340px) {
         display: none;
     }
 }
-
 .secondImg {
     max-width: 650px;
     width: 100%;
     max-height: 650px;
     height: 100%;
     opacity: 0.5;
-
     @media (max-width:1340px) {
         margin: 0 auto;
         max-width: 530px;
         width: 100%;
         max-height: 530px;
     }
-
     @media (max-width:880px) {
         max-width: 800px;
         height: 460px;
         position: absolute;
         opacity: 1;
     }
-
     @media (max-width:560px) {
         width: 340px;
         height: 250px;
     }
 }
-
 .romb {
     max-width: 1235px;
     width: 100%;
@@ -331,15 +284,14 @@
     height: 100%;
     @include flexCenter();
     justify-content: center;
-
     @media (max-width:1340px) {
         margin: 0 auto;
-        max-width: 900px;
+        max-width: 1200px;
         width: 100%;
-        max-height: 900px;
+        max-height: 1200px;
+        height: 100%;
     }
-
     @media (max-width:880px) {
-        display: none;
+        visibility: hidden;
     }
 }
