--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -96,10 +96,6 @@
 
     @media (max-width:1340px) {
         left: 55%;
-    }
-
-    @media (max-width:1340px) {
-        left: 55%;
         padding-left: 100px;
     }
 
@@ -108,7 +104,8 @@
         justify-content: center;
         align-items: center;
         margin: 0 auto;
-        left: 50%;
+        top: 5%;
+        left: 48%;
     }
 
     @media (max-width:560px) {
@@ -143,6 +140,11 @@
 
     @media (max-width:1340px) {
         margin: 0 auto;
+    }
+
+    @media (max-width:860px) {
+        max-width: 350px;
+        max-height: 350px;
     }
 
     @media (max-width:560px) {
