--- a/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
+++ b/src/components/EcoSystem/Ambassadors/Ambassadors.module.scss
@@ -38,15 +38,25 @@
     display: flex;
     align-items: center;
     margin: 0;
+    margin-bottom: -55px;
 
     img {
         margin-right: 5px;
+    }
+
+    @media (max-width:900px) {
+        margin-bottom: -25px;
     }
 
     @media (max-width:480px) {
         h2 {
             font-size: 18px;
             font-weight: 700;
+        }
+
+        img {
+            width: 36.634px;
+            height: 23.986px;
         }
     }
 }
@@ -71,11 +81,11 @@
         margin: 0 auto;
     }
 
-    @media (max-width:480px) {
-        max-width: 218px;
+    @media (max-width:625px) {
+        max-width: 235px;
         height: 44px;
-        font-size: 14px;
-        font-weight: 500;
+        font-size: 18px;
+        font-weight: 700;
         line-height: 18.5px;
     }
 }
@@ -90,6 +100,8 @@
     @media (max-width:480px) {
         max-width: 228.355px;
         max-height: 197.726px;
+        margin-left: auto;
+        margin-right: 25px;
     }
 }
 
@@ -98,6 +110,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: -35px;
 
     @media (max-width:900px) {
         flex-direction: column-reverse;
