--- a/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
+++ b/src/components/EcoSystem/CompainFriends/CompainFriends.module.scss
@@ -39,15 +39,26 @@
     display: flex;
     align-items: center;
     margin: 0;
+    margin-bottom: -85px;
 
     img {
         margin-right: 5px;
+    }
+
+
+    @media (max-width:900px) {
+        margin-bottom: -25px;
     }
 
     @media (max-width:480px) {
         h2 {
             font-size: 18px;
             font-weight: 700;
+        }
+
+        img {
+            width: 33.603px;
+            height: 24px;
         }
     }
 }
@@ -75,8 +86,8 @@
     @media (max-width:480px) {
         max-width: 218px;
         height: 44px;
-        font-size: 14px;
-        font-weight: 500;
+        font-size: 17px;
+        font-weight: 700;
         line-height: 18.5px;
     }
 }
@@ -99,6 +110,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: -85px;
 
     @media (max-width:900px) {
         flex-direction: column-reverse;
