--- a/src/components/EcoSystem/EcoSystem.module.scss
+++ b/src/components/EcoSystem/EcoSystem.module.scss
@@ -1,7 +1,12 @@
 .EcoSystem {
     max-width: 1925px;
     width: 100%;
-    margin-bottom: 15px;
+    box-sizing: border-box;
+
+
+    @media (max-width:625px) {
+        padding-bottom: 35px;
+    }
 }
 
 .topLine {
@@ -11,18 +16,28 @@
 }
 
 .ecosystemContent {
-    max-width: 1050px;
-    width: 95%;
+    max-width: 1080px;
+    width: 100%;
     text-align: justify;
-    line-height: 31px;
     margin: 0 auto;
     color: var(--eigengrau-color);
-    padding: 20px;
     box-sizing: border-box;
+
+    @media (max-width:1028px) {
+        padding: 20px 48px;
+    }
+
+    h2 {
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        margin: 0;
+    }
 
     p {
         font-size: 20px;
         font-weight: 500;
+        line-height: 31px;
     }
 
     @media (max-width:480px) {
@@ -42,14 +57,41 @@
 .title {
     display: flex;
     align-items: center;
-    margin-top: 15px;
+    padding-top: 55px;
+    margin-left: -55px;
+    box-sizing: border-box;
 
 
     img {
         margin-right: 10px;
     }
+
+    @media (max-width:625px) {
+        margin-left: -45px;
+
+    }
+
+    @media (max-width:560px) {
+        margin-left: -40px;
+        padding-top: 15px;
+
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+        }
+
+        img {
+            width: 26.794px;
+            height: 24.301px;
+        }
+    }
+
 }
 
 .ecoDiv {
-    height: 90px;
+    height: 80px;
+
+    @media (max-width:625px) {
+        height: 0px;
+    }
 }
