--- a/src/components/EcoSystem/Volunteers/Volunteers.module.scss
+++ b/src/components/EcoSystem/Volunteers/Volunteers.module.scss
@@ -37,6 +37,11 @@
     @media (max-width:900px) {
         flex-direction: column;
     }
+
+    @media (max-width:480px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 .title {
@@ -44,7 +49,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    padding-left: 35px;
+    margin-bottom: -65px;
 
     img {
         margin-right: 5px;
@@ -55,13 +60,20 @@
         align-items: center;
         justify-content: flex-start;
         padding-left: 15px;
-
+        margin-bottom: -35px;
     }
 
     @media (max-width:480px) {
+        margin-left: 25px;
+       padding-left: 0px;
         h2 {
             font-size: 18px;
             font-weight: 700;
+        }
+
+        img {
+            width: 17.455px;
+            height: 23.998px;
         }
     }
 }
@@ -84,7 +96,7 @@
         background: #C5D92D;
         box-shadow: -21px 16px 38px 0px rgba(197, 217, 45, 0.29);
 
-        @media (max-width:560px) {
+        @media (max-width:625px) {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -118,5 +130,7 @@
     @media (max-width:480px) {
         max-width: 228px;
         max-height: 197px;
+        margin-right: auto;
+        margin-left: 25px;
     }
 }
