--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -68,6 +68,10 @@
     flex-direction: column;
     font-size: 20px;
     font-weight: 500;
+
+    p {
+        margin: 9px 0;
+    }
 }
 
 .ourEcoSystem {
@@ -88,14 +92,14 @@
 .footerBottomPart {
     max-width: 1920px;
     width: 100%;
-    height: 110px;
+    height: 70px;
     background-color: #C0C0C0;
 }
 
 .img301 {
     max-height: 400px;
     position: absolute;
-    top: 20%;
+    top: 35%;
     left: 45%;
     box-sizing: border-box;
 
@@ -115,10 +119,12 @@
         left: 33%;
     }
 
-    @media (max-width:560px) {
+    @media (max-width:625px) {
         max-height: 140px;
         height: 63%;
         width: 45%;
+        top: 77%;
+        left: 30%;
     }
 }
 
@@ -159,7 +165,7 @@
         display: flex;
         flex-direction: row;
         padding-bottom: 55px;
-        padding-left: 45px;
+        padding-left: 55px;
 
         img {
             margin-bottom: 3px;
