--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,22 +2,25 @@
     display: flex;
     align-items: center;
 }
-
 .Home {
     position: relative;
     max-width: 1920px;
     width: 100%;
+    height: 785px;
     margin: 0 auto;
     padding-top: 106px;
-    padding-bottom: 150px;
-    box-sizing:border-box ;
+    padding-bottom: 130px;
+    box-sizing: border-box;
+
     @media (max-width:880px) {
         margin-top: 50px;
     }
+
     @media (max-width:560px) {
         max-width: 590px;
         max-height: 600px;
     }
+
     @media (max-width:480px) {
         padding-bottom: 250px;
     }
@@ -25,55 +28,67 @@
 .styles {
     max-width: 1920px;
     width: 100%;
+
     @media (max-width:880px) {
         display: none;
     }
 }
 .content {
     max-width: 1080px;
-    width: 100%;
+    width: 95%;
+
     @media (max-width:1151px) {
         max-width: 680px;
         width: 100%;
     }
+
     @media (max-width:880px) {
         margin-top: 50px;
     }
+
     @media (max-width:590px) {
         max-width: 590px;
         max-height: 700px;
         margin-top: 40px;
     }
+
     @media (max-width:480px) {
         margin-top: 30px;
     }
+
     h2 {
         color: var(--eigengrau-color);
-        font-size: 46px;
-        font-weight: 900;
+        font-size: 48px;
+        font-weight: 800;
         margin-bottom: 0;
+
         @media (max-width:1151px) {
             font-size: 30px;
             text-align: center;
         }
+
         @media (max-width:616px) {
             font-size: 28px;
         }
+
         @media (max-width:560px) {
             font-weight: 700;
         }
     }
+
     p {
-        max-width: 1080px;
-        width: 95%;
+        max-width: 520px;
+        width: 100%;
         text-align: justify;
         font-size: 18px;
-        font-weight: 600;
+        font-weight: 500;
         line-height: 31px;
         margin-bottom: 12px;
+
         @media (max-width:616px) {
             font-size: 16px;
         }
+
         @media (max-width:560px) {
             width: 399px;
             text-align: justify;
@@ -82,7 +97,8 @@
             margin: 0 auto;
             margin-top: 10px;
         }
-         @media (max-width:480px) {
+
+        @media (max-width:480px) {
             width: 259px;
         }
     }
@@ -90,6 +106,7 @@
 .buttonDiv {
     @include flexCenter();
     justify-content: space-between;
+
     .be {
         width: 245px;
         height: 50px;
@@ -100,8 +117,9 @@
         font-weight: 700;
         border: none;
     }
+
     .all {
-        width: 245px;
+        width: 240px;
         height: 50px;
         border-radius: 46px;
         border: 2px solid var(--eigengrau-color);
@@ -109,19 +127,24 @@
         color: var(--eigengrau-color);
         font-size: 18px;
         font-weight: 700;
-        margin-left: 10px;
+        margin-left: 15px;
     }
+
     @media (max-width:560px) {
         flex-direction: column;
         margin-top: 10px;
+
         .be {
             width: 218px;
             height: 44px;
             margin-bottom: 10px;
         }
+
         .all {
             width: 218px;
             height: 44px;
+            margin-left: 0px;
+            margin-bottom: 15px;
         }
     }
 }
@@ -134,55 +157,76 @@
     box-sizing: border-box;
     z-index: 1;
     position: absolute;
-    top: 35%;
-    left: 20%;
+    top: 30%;
+    left: 23%;
+
+    @media (max-width:1480px) {
+        top: 29%;
+        left: 15%;
+    }
+
     @media (max-width:1340px) {
         top: 29%;
         left: 8%;
     }
+
     @media (max-width:1151px) {
         flex-direction: column-reverse;
         left: 3%;
     }
+
     @media (max-width:1080px) {
         max-width: 900px;
         left: 8%;
     }
+
     @media (max-width:996px) {
         max-width: 750px;
     }
+
     @media (max-width:835px) {
         max-width: 650px;
     }
+
     @media (max-width:725px) {
-        max-width: 550px;
-        top: 25%;
-        left: 8%;
-    }
-    @media (max-width:616px) {
-        max-width: 500px;
+        max-width: 540px;
+        top: 35%;
         left: 5%;
     }
+
+    @media (max-width:540px) {
+        top: 27%;
+        left: 0%;
+    }
+
     @media (max-width:480px) {
         max-width: 350px;
+        top: 25%;
+        left: 5%;
     }
 }
-
 .img301 {
-    max-width: 550px;
+    max-width: 650px;
     width: 100%;
     margin: 0;
-    @media (max-width:1168px) {
+
+    @media (max-width:1480px) {
+        max-width: 480px;
+    }
+
+    @media (max-width:1280px) {
         max-width: 510px;
     }
+
     @media (max-width:560px) {
         max-width: 280px;
-        margin-bottom: 30px;
+        margin-bottom: 35px;
     }
 }
 .socialMedia {
     @include flexCenter();
     flex-direction: column;
+
     @media (max-width:1200px) {
         display: none;
     }
@@ -204,6 +248,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+
     img {
         margin-bottom: 3px;
     }
@@ -218,60 +263,65 @@
     max-height: 785px;
     height: 100%;
     position: absolute;
-    top: 11%;
+    top: 10%;
     left: 50%;
     transform: translateX(-50%);
     @include flexCenter();
     justify-content: space-between;
     padding: 15px;
     box-sizing: border-box;
+
     @media (max-width:1340px) {
         top: 6%;
         left: 53%;
     }
+
     @media (max-width:880px) {
-        top: -10%;
+        top: -5%;
         left: 50%;
     }
+
+    @media (max-width:625px) {
+        max-width: 450px;
+        width: 100%;
+        top: -10%;
+        left: 53%;
+    }
+
     @media (max-width:560px) {
         max-width: 350px;
         width: 100%;
         top: -18%;
         left: 52%;
     }
+
     @media (max-width:480px) {
-        top: -19%;
+        top: -18%;
+        left: 50%;
     }
 }
 .firstImg {
-    max-width: 134px;
-    width: 100%;
-    max-height: 134px;
-    height: 100%;
+    width: 134px;
+    height: 134px;
     transform: rotate(90deg);
     opacity: 0.5;
+
     @media (max-width:1340px) {
         display: none;
     }
 }
 .secondImg {
-    max-width: 650px;
-    width: 100%;
-    max-height: 650px;
-    height: 100%;
-    opacity: 0.5;
+    width: 620px;
+    height: 620px;
+    opacity: 0.6;
+
     @media (max-width:1340px) {
         margin: 0 auto;
         max-width: 530px;
         width: 100%;
         max-height: 530px;
     }
-    @media (max-width:880px) {
-        max-width: 800px;
-        height: 460px;
-        position: absolute;
-        opacity: 1;
-    }
+
     @media (max-width:560px) {
         width: 340px;
         height: 250px;
@@ -280,18 +330,35 @@
 .romb {
     max-width: 1235px;
     width: 100%;
-    max-height: 785px;
-    height: 100%;
+    height: 645px;
     @include flexCenter();
     justify-content: center;
+    padding-left: 205px;
+
+    @media (max-width:1480px) {
+        max-width: 1200px;
+        width: 75%;
+    }
+
     @media (max-width:1340px) {
         margin: 0 auto;
         max-width: 1200px;
-        width: 100%;
+        width: 72%;
         max-height: 1200px;
         height: 100%;
     }
+
     @media (max-width:880px) {
-        visibility: hidden;
+        display: none;
+    }
+}
+.bottomPart {
+    @media (max-width:480px) {
+        height: 40px;
+        background-color: rgb(242, 242, 242);
+        max-width: 480px;
+        margin-left: -24px;
+        margin-right: -19px;
+        padding-top: 4px;
     }
 }
