--- a/src/components/Hypotheses/Hypotheses.module.scss
+++ b/src/components/Hypotheses/Hypotheses.module.scss
@@ -3,22 +3,40 @@
     width: 100%;
     max-height: 900px;
     height: 100%;
+    margin-bottom: 10px;
 }
 
 .hypothesesContent {
     max-width: 1080px;
-    width: 95%;
+    width: 55%;
     text-align: justify;
     line-height: 31px;
     margin: 0 auto;
     color: var(--eigengrau-color);
     box-sizing: border-box;
+
     p {
         font-size: 20px;
         font-weight: 500;
+
+        @media (max-width:625px) {
+            font-size: 20px;
+            line-height: 25px;
+            width: 100%;
+        }
+
+        @media (max-width:560px) {
+            font-size: 14px;
+            line-height: 18.5px;
+        }
     }
+
     @media (max-width:980px) {
-        padding: 15px;
+        width: 85%;
+    }
+
+    @media (max-width:480px) {
+        padding: 0 20px;
     }
 }
 
@@ -29,15 +47,41 @@
 }
 
 .title {
-    margin-left: -15px;
     display: flex;
     align-items: center;
+    margin-left: -55px;
+    box-sizing: border-box;
+
     img {
         margin-right: 10px;
         margin-left: 10px;
+        padding-top: 25px;
+
+        @media (max-width:560px) {
+            margin-right: 10px;
+            margin-left: 0px;
+            padding-top: 10px;
+            width: 20px;
+            height: 24.035px;
+        }
     }
+
+    h2 {
+        font-size: 36px;
+        font-weight: 700;
+        margin-bottom: 0;
+    }
+
     @media (max-width:980px) {
-        margin-left: 10px;
+
+        h2 {
+            font-weight: 700;
+        }
+    }
+
+    @media (max-width:560px) {
+        margin-left: -20px;
+
         h2 {
             font-size: 18px;
             font-weight: 700;
@@ -46,10 +90,13 @@
 }
 
 .hypothesesBgImg {
-    padding: 10px 7px 0 7px;
-    box-sizing: border-box;
+    padding: 94px 7px 60px 7px;
     max-width: 1925px;
     background-image: linear-gradient(var(--hypothese-color), var(--hypothese-color)), url('../../shared/assets/image498.jpg');
+
+    @media (max-width:625px) {
+        padding: 10px 35px;
+    }
 }
 
 .hypothesesDescription {
@@ -58,14 +105,15 @@
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
+    box-sizing: border-box;
 
     .buttonsDiv {
         display: flex;
         flex-direction: column;
+        padding-right: 15px;
 
         button {
-            max-width: 365px;
-            width: 100%;
+            width: 365px;
             max-height: 84px;
             height: 100%;
             padding: 25px;
@@ -74,15 +122,18 @@
             font-size: 18px;
             font-weight: 700;
             text-transform: uppercase;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             border-radius: 45px;
             border: none;
         }
 
         button:hover {
             background-color: var(--hexadecimal-color);
-            color: var(--white-color)
+            color: var(--white-color);
+            padding-left: 15px;
+            filter: drop-shadow(-21px 13px 29px rgba(221, 38, 78, 0.35));
         }
+
         @media (max-width:860px) {
             display: none;
         }
@@ -90,22 +141,30 @@
 
     .pDiv {
         color: var(--white-color);
-        max-width: 630px;
-        width: 100%;
-        max-height: 620px;
+        max-width: 883px;
         width: 100%;
         text-align: justify;
-        font-size: 19px;
+        font-size: 18px;
+        font-style: normal;
         font-weight: 500;
-        line-height: 31px;
+        line-height: 29px;
+        padding-bottom: 20px;
+        margin-left: 10px;
+        margin-top: 0;
         margin: 0;
+
         @media (max-width:1024px) {
-            font-size: 16px;
             max-width: 630px;
             line-height: 20px;
             width: 90%;
         }
+
+        @media (max-width:560px) {
+            padding-bottom: 0px;
+            font-size: 16px;
+        }
     }
+
     @media (max-width:860px) {
         display: flex;
         flex-direction: column;
@@ -128,6 +187,7 @@
     margin-bottom: 15px;
     border-radius: 45px;
     border: none;
+
     @media (max-width:860px) {
         display: block;
     }
