--- a/src/components/Important/Important.module.scss
+++ b/src/components/Important/Important.module.scss
@@ -2,12 +2,15 @@
     position: relative;
     max-width: 1920px;
     width: 100%;
-    max-height: 780px;
+    max-height: 900px;
     height: 100%;
+    box-sizing: border-box;
+
+
 }
 
 .importantContent {
-    max-width: 1050px;
+    max-width: 1080px;
     width: 100%;
     text-align: justify;
     line-height: 31px;
@@ -16,6 +19,14 @@
     z-index: 1;
     padding: 25px;
     box-sizing: border-box;
+
+    @media (max-width:1028px) {
+        padding: 0 27px;
+    }
+
+    @media (max-width:480px) {
+        padding: 0 45px;
+    }
 }
 
 .topLine {
@@ -27,9 +38,17 @@
 .title {
     display: flex;
     align-items: center;
+    margin-left: -55px;
+    box-sizing: border-box;
 
     h2 {
+        font-size: 36px;
+        font-weight: 700;
         color: var(--eigengrau-color);
+
+        @media (max-width:625px) {
+            margin: 0px;
+        }
 
         @media (max-width:560px) {
             font-size: 18px;
@@ -40,6 +59,15 @@
     img {
         margin-right: 10px;
         margin-left: 10px;
+
+        @media (max-width:625px) {
+            width: 18.615px;
+            height: 21.999px;
+        }
+    }
+
+    @media (max-width:625px) {
+        margin-left: -35px;
     }
 }
 
@@ -47,13 +75,14 @@
     font-size: 20px;
     font-weight: 500;
 
-    @media (max-width:800px) {
-        font-size: 16px;
-    }
+    p {
+        font-size: 20px;
+        font-weight: 500;
 
-    @media (max-width:560px) {
-        font-size: 14px;
-        line-height: 18.5px;
+        @media (max-width:560px) {
+            font-size: 16px;
+            line-height: 18.5px;
+        }
     }
 }
 
@@ -63,7 +92,7 @@
     max-height: 785px;
     height: 100%;
     position: absolute;
-    top: 4%;
+    top: 1%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -72,12 +101,16 @@
     padding: 35px;
     box-sizing: border-box;
     z-index: 0;
+
+    @media (max-width:560px) {
+        left: 43%;
+    }
 }
 
 .firstImg {
-    max-width: 134px;
+    max-width: 95px;
     width: 100%;
-    max-height: 134px;
+    max-height: 96px;
     height: 100%;
     transform: rotate(90deg);
     opacity: 0.5;
@@ -85,16 +118,30 @@
     @media (max-width:1340px) {
         display: none;
     }
+
 }
 
 .secondImg {
-    max-width: 640px;
-    width: 100%;
-    max-height: 640px;
-    height: 100%;
-    opacity: 0.5;
+    width: 435px;
+    height: 435px;
 
     @media (max-width:1340px) {
         margin: 0 auto;
+    }
+
+    @media (max-width:560px) {
+        width: 340px;
+        height: 360px;
+    }
+}
+
+.bottomPart {
+    @media (max-width:480px) {
+        height: 50px;
+        background-color: rgb(242, 242, 242);
+        max-width: 480px;
+        margin-left: -45px;
+        margin-right: -45px;
+        padding-top: 4px;
     }
 }
