--- a/src/components/Mission/Mission.module.scss
+++ b/src/components/Mission/Mission.module.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     color: var(--dark-bluish-color);
+    padding-top: 45px;
 
     h3 {
         padding-left: 15px;
@@ -17,11 +18,15 @@
         max-width: 1070px;
         width: 95%;
         font-size: 20px;
-        font-size: 20px;
         font-weight: 500;
         line-height: 31px;
         padding-left: 15px;
         text-align: justify;
+
+        @media (max-width:625px) {
+            font-size: 20px;
+            padding-top: 0px;
+        }
 
         @media (max-width:560px) {
             font-size: 14px;
@@ -37,9 +42,10 @@
 }
 
 .contextImgText {
-    padding: 25px;
+    padding: 45px;
 
     @media (max-width:560px) {
+        padding: 50px 45px 20px 45px;
         font-size: 14px;
         line-height: 18.5px;
     }
@@ -47,19 +53,61 @@
 
 .contentText {
     z-index: 10;
+
+    h3 {
+        margin-top: 7px;
+        margin-bottom: 25px;
+
+        @media (max-width:625px) {
+            font-size: 16px;
+            font-weight: 700;
+        }
+    }
 }
 
 .missionImg {
     display: flex;
     align-items: center;
     margin-top: 15px;
+    margin-left: -35px;
+    box-sizing: border-box;
+
+    h2 {
+        font-size: 36px;
+        font-weight: 700;
+        margin: 0;
+
+        @media (max-width:560px) {
+            font-size: 18px;
+            font-weight: 700;
+        }
+    }
+
+    @media (max-width:1028px) {
+        margin-left: -25px;
+    }
+
+    @media (max-width:625px) {
+        margin-left: -25px;
+
+    }
+
+    @media (max-width:560px) {
+        img {
+            width: 22.748px;
+            height: 21.985px;
+        }
+    }
+
 }
 
 .buttonMore {
     margin-left: 15px;
     max-width: 245px;
     width: 100%;
-    padding: 15px;
+    max-height: 50px;
+    height: 100%;
+    padding: 12px;
     border-radius: 46px;
     border: 2px solid var(--hexadecimal-color);
     color: var(--dark-bluish-color);
@@ -84,7 +132,7 @@
     max-height: 785px;
     height: 100%;
     position: absolute;
-    top: 0%;
+    top: 5%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -119,9 +167,9 @@
 }
 
 .firstImg {
-    max-width: 134px;
+    max-width: 95px;
     width: 100%;
-    max-height: 134px;
+    max-height: 96px;
     height: 100%;
     transform: rotate(90deg);
     opacity: 0.5;
@@ -132,11 +180,8 @@
 }
 
 .secondImg {
-    max-width: 640px;
-    width: 100%;
-    max-height: 640px;
-    height: 100%;
-    opacity: 0.5;
+    width: 426.946px;
+    height: 426.557px;
 
     @media (max-width:1340px) {
         margin: 0 auto;
@@ -149,8 +194,13 @@
 
     @media (max-width:560px) {
         max-width: 440px;
-        width: 100%;
-        max-height: 440px;
-        height: 100%;
+        max-height: 270px;
+    }
+}
+
+.bottomPart {
+    @media (max-width:480px) {
+        height: 50px;
+        background-color: rgb(242, 242, 242);
     }
 }
