--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,7 +5,7 @@
     height: 100%;
     padding: 15px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     box-sizing: border-box;
     box-shadow: -6px 6px 16px rgba(8, 31, 66, 0.11);
@@ -13,6 +13,15 @@
     top: 0;
     z-index: 999;
     background: var(--white-color);
+
+    @media (max-width:625px) {
+        padding-left: 45px;
+        justify-content: center;
+    }
+
+    @media (max-width:480px) {
+        padding-left: 155px;
+    }
 }
 
 .img301 {
@@ -59,6 +68,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-left: 170px;
 
     a {
         color: var(--dark-bluish-color);
@@ -66,11 +76,6 @@
         padding: 10px;
         font-size: 14px;
         font-weight: 500;
-    }
-
-    a:hover {
-        color: var(--white-color);
-        text-shadow: 0 0 1em var(--dark-bluish-color), 0 0 0.2em var(--dark-bluish-color);
     }
 }
 
@@ -87,7 +92,7 @@
     display: none;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 625px) {
     .navigation {
         display: none;
     }
@@ -96,26 +101,33 @@
         display: block;
         position: fixed;
         top: 0;
-        left: -250px;
-        width: 220px;
+        left: -650px;
+        width: 100%;
         height: 100vh;
         background-color: var(--white-color);
-        padding: 15px;
         box-shadow: -6px 6px 16px rgba(8, 31, 66, 0.11);
         z-index: 998;
         transition: left 0.3s ease;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
+        justify-content: center;
+        align-items: flex-start;
+        padding-left: 35px;
         flex-direction: column;
+        overflow: hidden;
+        font-size: 20px;
+        font-weight: 800;
 
+        @media (max-width:480px) {
+            left: -480px;
+            width: 100%;
+        }
 
         a {
             color: var(--dark-bluish-color);
             text-decoration: none;
-            padding: 10px;
-            font-size: 14px;
-            font-weight: 500;
+            font-size: 18px;
+            font-weight: 700;
+            padding-bottom: 60px;
         }
     }
 
@@ -127,15 +139,12 @@
         display: block;
         position: absolute;
         top: 15px;
-        right: 15px;
+        left: 30px;
         padding: 8px 12px;
         background-color: var(--white-color);
-        border: 1px solid var(--hexadecimal-color);
-        border-radius: 4px;
-        font-size: 14px;
-        font-weight: 600;
         cursor: pointer;
-        margin-top: 20px;
+        margin-top: 22px;
+        z-index: 999;
     }
 
     .eng {
@@ -144,5 +153,43 @@
 
     .signIn {
         display: none;
+    }
+}
+
+.eng1 {
+    width: 33px;
+    height: 33px;
+    color: var(--white-color);
+    background-color: var(--hexadecimal-color);
+    border-radius: 100%;
+    font-size: 10px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 90px;
+    visibility: hidden;
+
+    @media (max-width:625px) {
+        margin-right: -150px;
+        margin-left: 160px;
+        visibility: visible;
+    }
+
+    @media (max-width:480px) {
+        margin-right: -130px;
+    }
+
+    @media (max-width:391px) {
+        margin-right: 0px;
+        margin-left: 5px;
+    }
+}
+
+.secondImg {
+    position: absolute;
+
+    @media (max-width:625px) {
+        left:40%
     }
 }
