--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,21 +1,30 @@
 .Projects {
     position: relative;
     max-width: 1920px;
-    width: 95%;
-    max-height: 900px;
-    height: 100%;
+    width: 100%;
+    height: 652px;
     margin-bottom: 25px;
     padding: 15px;
     box-sizing: border-box;
+
+    @media (max-width:1210px) {
+        height: 980px;
+    }
+
+    @media (max-width:900px) {
+        height: 900px;
+    }
 }
 
 .projectsContent {
-    max-width: 1050px;
-    width: 95%;
+    max-width: 1080px;
+    width: 100%;
     text-align: justify;
     line-height: 31px;
     margin: 0 auto;
     color: var(--eigengrau-color);
+    padding: 35px 35px;
+    box-sizing: border-box;
 
     p {
         font-size: 20px;
@@ -27,6 +36,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+
         p {
             max-width: 278px;
             font-size: 14px;
@@ -45,9 +55,21 @@
 .title {
     display: flex;
     align-items: center;
+    margin-left: -50px;
+    box-sizing: border-box;
 
     img {
         margin-right: 10px;
+        margin-left: 10px;
+        padding-top: 25px;
+        width: 30px;
+        height: 37px;
+    }
+
+    h2 {
+        font-size: 36px;
+        font-weight: 700;
+        margin-bottom: 0;
     }
 
     @media (max-width:480px) {
@@ -59,7 +81,7 @@
 }
 
 .projectItems {
-    max-width: 1080px;
+    max-width: 1100px;
     width: 100%;
     margin: 0 auto;
 
@@ -67,12 +89,43 @@
         padding-left: 27px;
         margin: 0 auto;
     }
+
+    @media (max-width:1210px) {
+        display: none;
+    }
 }
+
+.projectItems2 {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+    width: calc(70% - 10px);
+    margin-bottom: 10px;
+    display: none;
+
+    @media (max-width:1210px) {
+        display: block;
+    }
+
+    @media (max-width:625px) {
+        width: calc(85% - 10px);
+    }
+}
+
+.projectsGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  
+    @media (max-width: 480px) {
+      grid-template-columns: 1fr; 
+    }
+  }
 
 .projectButton {
     max-width: 344px;
     width: 100%;
-    padding: 15px;
+    max-height: 50px;
+    padding: 13px;
     border-radius: 46px;
     background: var(--hexadecimal-color);
     box-shadow: var(--button-shadow);
